--- a/src/UrgenceBundle/Resources/public/css/screen.css
+++ b/src/UrgenceBundle/Resources/public/css/screen.css
@@ -139,22 +139,50 @@ form {
     margin-bottom: 10px;
 }
 
-#page-content .panel > .panel-heading {
+#page-content .cards-container {
+    height: 500px;
+    overflow-y: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.cards-container .collapse-card {
+    padding: 0;
+}
+
+.cards-container .collapse-card .title {
+    padding: 10px;
+    font-size: 12px;
+}
+
+.cards-container .collapse-card .title i {
+    float: none;
+}
+
+.cards-container .collapse-card.red .title {
     background: #db1616;
-    border: none;
-    -moz-box-shadow: 0px 1px 3px 0px #656565;
-    -webkit-box-shadow: 0px 1px 3px 0px #656565;
-    -o-box-shadow: 0px 1px 3px 0px #656565;
-    box-shadow: 0px 1px 3px 0px #656565;
-    filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=3);
     color: #fff;
 }
 
-.panel-form .form-group {
+.cards-container .collapse-card.green .title {
+    background: #4ea13a;
+    color: #fff;
+}
+
+.cards-container .collapse-card.black .title {
+    background: #2c2c2c;
+    color: #fff;
+}
+
+.cards-container .collapse-card {
+    background: #f5f5f5;
+}
+
+.cards-container .form-group {
     margin-bottom: 10px;
 }
 
-.panel-form .form-group .form-control-static {
+.cards-container .form-group .form-control-static {
     min-height: 0;
 }
 
@@ -166,6 +194,10 @@ form {
 
 #map-indiquer-position {
     height: 300px;
+}
+
+.map-tooltip {
+    font-size: 11px;
 }
 
 /* * * * * Footer * * * * */
